--- a/_upskills/web-development-bali-tina.html
+++ b/_upskills/web-development-bali-tina.html
@@ -13,9 +13,18 @@ price: $300 USD
 duration: 3 days
 host-name: Tina
 host-bio: Tina is a self-taugt web developer based in Bali she is also the co-founder of institute of code.
-host-photo: tina.jpg
+host-photo: /images/hosts/tina.jpg
 feature-image_path: /uploads/web-development-bali-tina.jpg
+featured-images:
+  - path: /images/upskills/web-development-bali/learn-how-to-code_3.jpg
+  - path: /images/upskills/web-development-bali/learn-how-to-code_4.jpg
+  - path: /images/upskills/web-development-bali/learn-how-to-code_5.jpg
+  - path: /images/upskills/web-development-bali/learn-how-to-code_6.jpg
+  - path: /images/upskills/web-development-bali/learn-how-to-code_7.jpg
+  - path: /images/upskills/web-development-bali/learn-how-to-code_8.jpg
+
 level: Beginner
+skill-images: learn-how-to-code_3.jpg
 categories: ['tech']
 ---
 <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/cfd519d85dc0577d9311006bde0fcc9f.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
