--- a/_upskills/Twerking in Thailand.html
+++ b/_upskills/Twerking in Thailand.html
@@ -12,8 +12,8 @@ good-to-know: Make sure you have enough space on your laptop to install lightroo
 price: $250 USD
 duration: 2 nights
 host-name: Simba
-host-bio: Simba is a self-taught twerker based around the world, he spends most of his time in Thailand, perfecting his twerking skills and doing a little bit of coding on the side.
-host-photo: simba.jpg
+host-bio: Simba is a self-taught twerker based around the world, he spends most of his time in Thailand, perfecting his twerking skills and doing a little bit of Tinder on the side.
+host-photo: /images/hosts/simba.jpg
 feature-image_path: /uploads/twerking-thailand-simba.jpg
 level: Beginner, Intermediate, Advanced, everyone is welcome.
 categories: ["art", "adventure"]
