--- a/_upskills/kimbap-making.html
+++ b/_upskills/kimbap-making.html
@@ -13,7 +13,7 @@ duration: 1 day
 price: $60 USD
 host-name: Ulla
 host-bio: Ulla is a kimbap lover and she loves being artistic with her creations.
-host-photo: ulla.jpg
+host-photo: /images/hosts/ulla.jpg
 feature-image_path: /uploads/kimbap-seoul.jpg
 level: Beginner
 categories: ['food']
