--- a/_upskills/life-coaching.html
+++ b/_upskills/life-coaching.html
@@ -13,7 +13,7 @@ price: $60 USD
 duration: 1 day
 host-name: Kevin
 host-bio: Kevin is a certified life coach based in Bali.
-host-photo: kevin.jpg
+host-photo: /images/hosts/kevin.jpg
 feature-image_path: /uploads/life-coaching-bali.jpg
 level: Beginner
 categories: ['art', 'lifestyle']
