--- a/_upskills/lightroom-photography-bali-ulla.html
+++ b/_upskills/lightroom-photography-bali-ulla.html
@@ -13,7 +13,7 @@ price: $200 USD
 duration: 2 days
 host-name: Emilio
 host-bio: Emilio is a self-taught photographer based in Bali.
-host-photo: emilio.png
+host-photo: /images/hosts/emilio.png
 about: I would never classify myself as a "photographer” but more as someone who simply wants to capture the beauty of the ever-changing world for others to see.
 feature-image_path: /uploads/photography-bali-emilio.jpg
 level: Beginner - Advanced
