--- a/_upskills/power-vinyasa_bali.html
+++ b/_upskills/power-vinyasa_bali.html
@@ -13,7 +13,7 @@ price: $100 USD
 duration: 1 day
 host-name: with Amaranta
 host-bio: Amaranta is a professional yoga teacher based in bali, Indonesia. Hailing from Mexico, Amaranta has called Bali her home for the past 3 years. Her passion is Vinyasa power yoga.
-host-photo: amaranta.jpg
+host-photo: /images/hosts/amaranta.jpg
 feature-image_path: /uploads/vinyasa-yoga-bali.jpg
 categories: ['adventure', 'lifestyle']
 ---
