--- a/signup.html
+++ b/signup.html
@@ -2,14 +2,14 @@
 layout: default
 title: Join the crew
 subtitle: Sign up now
-banner: /images/homepage/signup-bg.jpg
+banner: /images/homepage/homepage-bg.jpg
 ---
 
 <!-- SIGN UP SECTION -->
 <section class="sign-up-section">
   <div>
     <h2>
-      Want to offer your skills or want to learn something new?
+      Want to offer your skills or learn something new?
     </h2>
     <p> We're currently building our community and looking for people like you.</p>
     <p> Sign up now and tell us about your kickass skillz.</p>
