--- a/_upskills/power-vinyasa_bali.html
+++ b/_upskills/power-vinyasa_bali.html
@@ -11,7 +11,7 @@ what: I can use my camera or you can bring yours and also we can edit in my ligh
 good-to-know: Make sure you have enough space on your laptop to install lightroom if you want to do that and also space on your memory card to take photos.
 price: $100 USD
 duration: 1 day
-host-name: with Amaranta
+host-name: Amaranta
 host-bio: Amaranta is a professional yoga teacher based in bali, Indonesia. Hailing from Mexico, Amaranta has called Bali her home for the past 3 years. Her passion is Vinyasa power yoga.
 host-photo: /images/hosts/amaranta.jpg
 feature-image_path: /uploads/vinyasa-yoga-bali.jpg
