--- a/about.html
+++ b/about.html
@@ -20,3 +20,6 @@ banner: /images/homepage/homepage-bg.jpg
     <p>Our aim is to inspire personal empowerment, growth and connection.</p>
   </div>
 </section>
+<section>
+  <img src="/uploads/life-coaching-bali.jpg">
+</section>
