--- a/contact.html
+++ b/contact.html
@@ -4,3 +4,13 @@ title: Get in touch
 subtitle: We'd love to hear from you
 banner: /images/homepage/homepage-bg.jpg
 ---
+<section class="sign-up-form center">
+  <p>What's on your mind?</p>
+  <form method="POST" action="http://formspree.io/urisager@gmail.com">
+  <input type="text" name="name" placeholder="Your name">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Message" rows="5"></textarea>
+  <input type="hidden" name="_next" value="/index.html"/>
+  <button type="submit">Send</button>
+</form>
+</section>
