--- a/_upskills/Twerking in Thailand.html
+++ b/_upskills/Twerking in Thailand.html
@@ -5,14 +5,14 @@ title: Twerking
 subtitle: Learn how to twerk in Thailand
 skill-name: Twerking in Thailand
 location: 'Koh Pha Ngan, Thailand'
-snippet: Learn how to twerk in Thailand. Shape your booty and be your own boss. If you're lucky, you might also learn how to code on the side.
-where: Bali around Canggu, rice fields and Eco beach.
-what: I can use my camera or you can bring yours and also we can edit in my lightroom if you don't have one set up yet.
-good-to-know: Make sure you have enough space on your laptop to install lightroom if you want to do that and also space on your memory card to take photos.
+snippet: Learn how to twerk in Thailand. Sweat with Simba and shape that booty - and if you're lucky, you might also learn how to code on the side.
+where: Koh Pha Ngan, Had Rin Full Moon Beach
+what: I will provide you with my finest expertise in twerking and booty shaking moves.
+good-to-know:  Make sure you are in good shape as twerking ain't an easy sport. Be prepared to SWEAT.
 price: $250 USD
 duration: 2 nights
 host-name: Simba
-host-bio: Simba is a self-taught twerker based around the world, he spends most of his time in Thailand, perfecting his twerking skills and doing a little bit of Tinder on the side.
+host-bio: Simba is a self-taught twerker based around the world, he spends most of his time in Thailand perfecting his twerking skills and doing a little bit of Tinder'ing and coding on the side.
 host-photo: /images/hosts/simba.jpg
 feature-image_path: /uploads/twerking-thailand-simba.jpg
 level: Beginner, Intermediate, Advanced, everyone is welcome.
