--- a/how-it-works.html
+++ b/how-it-works.html
@@ -21,7 +21,7 @@ banner: /images/homepage/homepage-bg.jpg
 
 <section class="our-story-section" >
   <div>
-    <h4> You can choose to sign up as a local friend and teacher or as lifelong learner and student - or perhaps both?</h4>
+    <p> You can choose to sign up as a local friend and teacher or as lifelong learner and student - or perhaps both?</p>
     <p>As a local friend, even if you are not currently traveling, you might still be looking for connection and what better way to do that, than by teaching someone something only YOU know best?</p>
     <section class="center">
       <div>
