--- a/_upskills/life-coaching.html
+++ b/_upskills/life-coaching.html
@@ -6,13 +6,13 @@ subtitle: Life coaching
 skill-name: life-coaching
 location: Somewhere in the world
 snippet: Learn about yourself and your life path
-where: Bali around Canggu, rice fields and Eco beach.
-what: I can use my camera or you can bring yours and also we can edit in my lightroom if you don't have one set up yet.
-good-to-know: Make sure you have enough space on your laptop to install lightroom if you want to do that and also space on your memory card to take photos.
+where: Somewhere in the world where ever Kevin is.
+what: I will dig deep into your seoul and see the true you and heal you of all of your sorrows and despairs.
+good-to-know: Make sure you have enough mental space on your harddrive as this will take up a lot.
 price: $60 USD
 duration: 1 day
 host-name: Kevin
-host-bio: Kevin is a certified life coach based in Bali.
+host-bio: Kevin is a certified life coach based somewhere in the world.
 host-photo: /images/hosts/kevin.jpg
 feature-image_path: /uploads/life-coaching-bali.jpg
 level: Beginner
