--- a/_upskills/lightroom-photography-bali-ulla.html
+++ b/_upskills/lightroom-photography-bali-ulla.html
@@ -9,6 +9,7 @@ snippet: Learn how to take beautiful photos and edit them with Adobe lightroom.
 where: Bali around Canggu, rice fields and Eco beach.
 what: I can use my camera or you can bring yours and also we can edit in my lightroom if you don't have one set up yet.
 good-to-know: Make sure you have enough space on your laptop to install lightroom if you want to do that and also space on your memory card to take photos.
+where: Palm House, Canggu, Bali
 price: $200 USD
 duration: 2 days
 host-name: Emilio
