--- a/_upskills/power-vinyasa_bali.html
+++ b/_upskills/power-vinyasa_bali.html
@@ -7,8 +7,9 @@ skill-name: Power Vinyasa Bali
 location: 'Bali, Indonesia'
 snippet: Learn the basics of Power Vinyasa yoga and how to keep practicing on your own.
 where: Bali around Canggu, rice fields and Eco beach.
-what: I can use my camera or you can bring yours and also we can edit in my lightroom if you don't have one set up yet.
-good-to-know: Make sure you have enough space on your laptop to install lightroom if you want to do that and also space on your memory card to take photos.
+what: I will teach you the basics of Vinyasa yoga and show you how to keep practising on your own.
+good-to-know: Make sure you bring your own towel and lots of fluids as you will SWEAT big time.
+where: The Barn, Ubud, Bali.
 price: $100 USD
 duration: 1 day
 host-name: Amaranta
