--- a/_upskills/web-development-bali-tina.html
+++ b/_upskills/web-development-bali-tina.html
@@ -7,12 +7,13 @@ skill-name: Web Development Tina
 location: 'Bali, Indonesia'
 snippet: Learn how to build badass websites. Be your own boss and get an understanding of how coding works.
 where: Bali around Canggu, rice fields and Eco beach.
-what: I can use my camera or you can bring yours and also we can edit in my lightroom if you don't have one set up yet.
-good-to-know: Make sure you have enough space on your laptop to install lightroom if you want to do that and also space on your memory card to take photos.
+what: I will teach you how to make your own badass website, how to use cloudcannon, jekyll and jquery.
+good-to-know: Make sure you have A LOT of patience for this one and be open-minded, Be prepared to LEARN and HAVE FUN.
+where: Palm House, Canggu, Bali
 price: $300 USD
 duration: 3 days
 host-name: Tina
-host-bio: Tina is a self-taugt web developer based in Bali she is also the co-founder of institute of code.
+host-bio: Tina is a badass, self-taugt web developer and jekyll LOVER based in Bali she is also the co-founder of institute of code and she is a sucker for spicy salsiccia and dirty martinis.
 host-photo: /images/hosts/tina.jpg
 feature-image_path: /uploads/web-development-bali-tina.jpg
 featured-images:
