--- a/_upskills/Twerking in Thailand.html
+++ b/_upskills/Twerking in Thailand.html
@@ -2,17 +2,18 @@
 layout: upskill
 banner: /uploads/twerking-thailand-simba.jpg
 title: Twerking
-subtitle: Learn how to twerk in Thailand
-skill-name: Twerking in Thailand
+subtitle: Twerking in Thailand
+skill-name: Sweat with Simba
 location: 'Koh Pha Ngan, Thailand'
-snippet: Learn how to twerk in Thailand. Sweat with Simba and shape that booty - and if you're lucky, you might also learn how to code on the side.
+snippet: Learn how to twerk in Thailand and shape that booty - and if you're lucky, you might also learn how to code on the side.
 where: Koh Pha Ngan, Had Rin Full Moon Beach
 what: I will provide you with my finest expertise in twerking and booty shaking moves.
-good-to-know:  Make sure you are in good shape as twerking ain't an easy sport. Be prepared to SWEAT.
+good-to-know:  Make sure you are in good shape as twerking ain't an easy sport. Be prepared to SWEAT with Simba.
+where: Full Moon Beach or whereever agreed.
 price: $250 USD
 duration: 2 nights
 host-name: Simba
-host-bio: Simba is a self-taught twerker based around the world, he spends most of his time in Thailand perfecting his twerking skills and doing a little bit of Tinder'ing and coding on the side.
+host-bio: Simba is a self-taught twerker based around the world, he spends most of his time in Thailand perfecting his twerking skills, doing a whole lot of Tinder'ing and a bit of coding on the side.
 host-photo: /images/hosts/simba.jpg
 feature-image_path: /uploads/twerking-thailand-simba.jpg
 level: Beginner, Intermediate, Advanced, everyone is welcome.
