--- a/_upskills/kimbap-making.html
+++ b/_upskills/kimbap-making.html
@@ -6,13 +6,14 @@ subtitle: Learn how to make beautiful artistic sushi
 skill-name: kimbap-making
 location: 'Seoul, South Korea'
 snippet: Learn how to make beautiful kimbap, everything from picking the right kind of rice, to washing the rice and picking the ingredients.
-where: Bali around Canggu, rice fields and Eco beach.
-what: I can use my camera or you can bring yours and also we can edit in my lightroom if you don't have one set up yet.
-good-to-know: Make sure you have enough space on your laptop to install lightroom if you want to do that and also space on your memory card to take photos.
+where: Itaewon, Seoul, South Korea
+what: I will show you how to prepare kimbap, was rice and pick the right ingredients.
+good-to-know: Make sure you arrive hungry as we will be eating lots of yummy kimbap at the end of the day.
+where: Itaweon, Seoul, South Korea
 duration: 1 day
 price: $60 USD
 host-name: Ulla
-host-bio: Ulla is a kimbap lover and she loves being artistic with her creations.
+host-bio: Ulla is a kimbap lover and she makes a mean lean kimbap.
 host-photo: /images/hosts/ulla.jpg
 feature-image_path: /uploads/kimbap-seoul.jpg
 level: Beginner
