--- a/how-it-works.html
+++ b/how-it-works.html
@@ -8,7 +8,7 @@ banner: /images/homepage/homepage-bg.jpg
 <section class="center">
   <div>
     <h2>Too cool for school?</h2>
-    <h1>Don't worry!</h1>
+    <h1>Then you've come to the right place!</h1>
   </div>
 </section>
 <!--Our story section  -->
