food photography creates

--- a/_upskills/Twerking in Thailand.html
+++ b/_upskills/Twerking in Thailand.html
@@ -1,23 +1,22 @@
 ---
 layout: upskill
 banner: /uploads/twerking-thailand-simba.jpg
-title: Twerking
-subtitle: Twerking in Thailand
-skill-name: Sweat with Simba
-location: 'Koh Pha Ngan, Thailand'
-snippet: Learn how to twerk in Thailand and shape that booty - and if you're lucky, you might also learn how to code on the side.
-where: Koh Pha Ngan, Had Rin Full Moon Beach
-what: I will provide you with my finest expertise in twerking and booty shaking moves.
-good-to-know:  Make sure you are in good shape as twerking ain't an easy sport. Be prepared to SWEAT with Simba.
-where: Full Moon Beach or whereever agreed.
-price: $250 USD
-duration: 2 nights
-host-name: Simba
-host-bio: Simba is a self-taught twerker based around the world, he spends most of his time in Thailand perfecting his twerking skills, doing a whole lot of Tinder'ing and a bit of coding on the side.
-host-photo: /images/hosts/simba.jpg
-feature-image_path: /uploads/twerking-thailand-simba.jpg
-level: Beginner, Intermediate, Advanced, everyone is welcome.
-categories: ["art", "adventure"]
+title: Instagram Food Photography
+subtitle: Food photography
+skill-name: Food Photography
+location: 'Los Angeles'
+snippet: Learn how take beautiful food pictures on your phone. You will learn about lighthing and how to create depth using your smartphone.
+where: Arts District, L.A.
+what: I will provide you with  my best tips on how to take great food pictures, how to play with colors and how to edit them using free apps.
+good-to-know:  Make sure you bring your smartphone and have enough storage for taking pictures and downloading apps.
+where: Arts District, L.A.
+price: $110 USD
+duration: 8 hours
+host-name: Leah
+host-bio: Leah is a self-taught food blogger, she has successfully grown her audience to more than 50k followers during the past year. She loves to cook and create beautiful food shoots.
+feature-image_path: /uploads/food-photography.jpg
+level: Beginner
+categories: ["art", "food"]
 ---
 
 <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/cfd519d85dc0577d9311006bde0fcc9f.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
