--- a/_upskills/Twerking in Thailand.html
+++ b/_upskills/Twerking in Thailand.html
@@ -1,22 +1,23 @@
 ---
 layout: upskill
 banner: /uploads/food-photography.jpg
-title: Instagram Food Photography
-subtitle: Food photography
-skill-name: Food Photography
-location: 'Los Angeles'
-snippet: Learn how take beautiful food pictures on your phone. You will learn about lighthing and how to create depth using your smartphone.
-where: Arts District, L.A.
+title: Food Photography & Styling
+subtitle: Learn Food photography/styling in London
+skill-name: Food Photography/Styling
+location: 'London, U.K.'
+snippet: Learn how to take beautiful food pictues and how you can style your food shots. You will learn about lighthing and how to create depth using your smartphone.
+where: Notting Hill, London
 what: I will provide you with  my best tips on how to take great food pictures, how to play with colors and how to edit them using free apps.
 good-to-know:  Make sure you bring your smartphone and have enough storage for taking pictures and downloading apps.
-where: Arts District, L.A.
-price: $110 USD
-duration: 8 hours
-host-name: Leah
-host-bio: Leah is a self-taught food blogger, she has successfully grown her audience to more than 50k followers during the past year. She loves to cook and create beautiful food shoots.
+where: Notting Hill Farmers Market, London
+price: 100 GBP
+duration: 1 day, 8 hours
+host-name: Zandra
+host-bio: Zandra is a London/Berlin based foodie, drawn to people, beautiful food and crazy about tea. Former pastry chef who trained in a UK Michelin starred restaurant.
 feature-image_path: /uploads/food-photography.jpg
+host-photo: /uploads/zandra.jpg
 level: Beginner
 categories: ["art", "food"]
 ---
 
-<!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/cfd519d85dc0577d9311006bde0fcc9f.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+<a href="https://www.instagram.com/londonbrewedtea/" target="_blank"><img src="/uploads/londonbrewedtea.jpg" alt="londonbrewedtea.jpg"></a>
