--- a/_upskills/professional-make-up.html
+++ b/_upskills/professional-make-up.html
@@ -1,23 +1,22 @@
 ---
 layout: upskill
-banner: /uploads/hand-painted-lettering.jpg
-title: Hand Painted Lettering
-subtitle: Learn Hand Painted Lettering in Dublin
-skill-name: Hand painted lettering
-location: 'Dublin, Ireland'
-snippet: Learn hand painted letter styles and techniques giving you the skills to create your own signs and hand lettering designs.
-where: The Chocolate Factory, Kings Inn Street, Dublin 1
-what: All materials needed (paper, paint, brushes). Tea/coffee and snacks. Small class sizes. A take home sign on wooden board that you will make yourself under guidance from me.
-good-to-know: We require a minimum number of bookings for our courses to take place. If we have insufficient numbers the course will be postponed to a later date, notifying you 72 hours beforehand. You will be refunded in full
-where: The Chocolate Factory, Kings Inn Street, Dublin 1
-price: €275 EUR per course
+banner: /uploads/sakimakeupartist.jpg
+title: Professional Make-Up class, Styling & Photoshoot
+subtitle: Learn how to do a professional make-up in Los Angeles
+skill-name: Professional Make-Up
+location: 'Los Angeles'
+snippet: Learn how to do a professional make-up like a pro make up artist.
+what: You will learn about what products to use for your skin tone and how to apply, what brushes to use and you will get a full professional makeover. After the class, you will learn how to apply make-up yourself and to finish off, we will do a professional make-up photo shoot where you will also learn how to edit your pictures and promote on instagram. BONUS! Instagram tips and tricks provided.
+where: Northridge, Los Angeles
+good-to-know: Bring clothes for the photoshoot, anything strapless is good. It's also a good idea to bring your own make-up bag as I will help you "clean it up"!
+where: Northridge Mall, Los Angeles
+price: $275 USD per course
 duration: 2 full days, 7 hours each day
-host-name: Vanessa Powers
-host-bio: Vanessa is a Dublin based sign painter specialising in traditional hand-painted signs. Taking inspiration from artists like Josh Luke and Jeff Canham, in 2014 Vanessa established Signs of Power, joining a small but growing number of artists reviving the lost craft of sign painting and has been putting her mark on shops, bars and other businesses across the city ever since. She has also worked on commissions for Guinness, Jameson, Facebook and Twitter.
-host-photo: /uploads/vanessa-power.jpg
-feature-image_path: /uploads/hand-painted-lettering-dublin.jpg
+host-name: Saki
+host-bio: Saki is a Los Angeles based self-taught make-up artist. She has successfully grown her brand @sakimakeupartist to more than 15K followers on Instagram with a super engaged audience. Originally hailing from Venezuela, Saki now calls LA home.
+feature-image_path: /uploads/sakimakeupartist.jpg
 level: Beginner/All Levels
 categories: ["art", "lifestyle"]
 ---
 
-<a href="https://www.instagram.com/signsofpower/" target="_blank"><img src="/uploads/signsofpower-instagram.jpg" alt="signsofpower-instagram.jpg"></a>
+<a href="https://www.instagram.com/sakimakeupartist/" target="_blank"><img src="/uploads/sakimakeupartist-instagram.jpg" alt="sakimakeupartist-instagram.jpg"></a>
