--- a/signup.html
+++ b/signup.html
@@ -17,12 +17,12 @@ banner: /images/homepage/homepage-bg.jpg
 </section>
 
 <section class="sign-up-form center">
-  <p> Sign up now and tell us about your kickass skillz:</p>
+  <p> Sign up now and tell us what you'd like to learn or teach:</p>
   <form method="POST" action="http://formspree.io/urisager@gmail.com">
-  <input type="text" name="name" placeholder="Tell me your name">
-  <input type="email" name="email" placeholder="Give me your email">
+  <input type="text" name="name" placeholder="Name">
+  <input type="email" name="email" placeholder="Email">
   <input type="text" id="location" name="location" placeholder="Where are you located?">
-  <textarea name="what-will-you-teach" placeholder="What will you teach?" rows="5"></textarea>
+  <textarea name="what-will-you-teach" placeholder="What would you like to teach or learn?" rows="5"></textarea>
   <textarea name="about-you" placeholder="Tell us a little about you" rows="5"></textarea>
   <input type="hidden" name="_next" value="/index.html"/>
   <button type="submit" class="button">Send</button>
