--- a/_upskills/bike-tour-copenhagen.html
+++ b/_upskills/bike-tour-copenhagen.html
@@ -21,3 +21,11 @@ categories: ["lifestyle", "adventure", "outdoors"]
 ---
 
 <a href="https://www.instagram.com/cphexplorer/" target="_blank"><img src="/uploads/cphexplorer-instagram.jpg" alt="cphexplorer-instagram.jpg"></a>
+<section class="sign-up-section">
+  <div>
+    <h3>
+      Sign up now to show interest and you'll be the first to know when we launch!
+    </h3>
+    <a class="button" href="/signup.html"> SIGN UP </a>
+  </div>
+</section>
