--- a/_upskills/professional-make-up.html
+++ b/_upskills/professional-make-up.html
@@ -20,3 +20,11 @@ categories: ["art", "lifestyle"]
 ---
 
 <a href="https://www.instagram.com/sakimakeupartist/" target="_blank"><img src="/uploads/sakimakeupartist-instagram.jpg" alt="sakimakeupartist-instagram.jpg"></a>
+<section class="sign-up-section">
+  <div>
+    <h3>
+      Sign up now to show interest and you'll be the first to know when we launch!
+    </h3>
+    <a class="button" href="/signup.html"> SIGN UP </a>
+  </div>
+</section>
