--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ banner: /images/homepage/homepage-bg.jpg
     <h2>
       Want to offer your skills, learn something new and have fun?
     </h2>
+    <h5>Sign up now to show interest and you'll be the first to know when we launch!</h5>
     <a class="button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
