--- a/_upskills/Twerking in Thailand.html
+++ b/_upskills/Twerking in Thailand.html
@@ -21,3 +21,11 @@ categories: ["art", "food"]
 ---
 
 <a href="https://www.instagram.com/londonbrewedtea/" target="_blank"><img src="/uploads/londonbrewedtea.jpg" alt="londonbrewedtea.jpg"></a>
+<section class="sign-up-section">
+  <div>
+    <h3>
+      Sign up now to show interest and you'll be the first to know when we launch!
+    </h3>
+    <a class="button" href="/signup.html"> SIGN UP </a>
+  </div>
+</section>
