--- a/_upskills/hand-painted-lettering.html
+++ b/_upskills/hand-painted-lettering.html
@@ -20,4 +20,11 @@ level: Beginner/All Levels
 categories: ["art", "lifestyle"]
 ---
 
-<a href="https://www.instagram.com/signsofpower/" target="_blank"><img src="/uploads/signsofpower-instagram.jpg" alt="signsofpower-instagram.jpg"></a>
+<section class="sign-up-section">
+  <div>
+    <h3>
+      Sign up now to show interest and you'll be the first to know when we launch!
+    </h3>
+    <a class="button" href="/signup.html"> SIGN UP </a>
+  </div>
+</section>
