--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 layout: default
 title: Learn with locals while you travel
 subtitle: Learn new skills, meet people and have fun
-banner: /images/homepage/homepage-bg.jpg
+banner: /images/homepage/brooke-cagle-195777.jpg
 ---
 
 <!--ABOUT BANNER SECTION  -->
 <section class="about-banner-section center">
   <div>
     <h5>Imagine going somewhere like London, Los Angeles or Bali - but instead of just hanging out doing the typical tourist stuff, you might be able to pick up a new skill or upskill an existing one?</h5>
-    <p>Learn with Locals allows you to meet likeminded people and learn something new and why not learn it from locals who know it best? Why not learn how to code in Bali? How to handdraw sign letters in Dublin or how set take awesome photos in London?</p>
+    <p>Learn with Locals allows you to meet likeminded people and learn something new and why not learn it from locals who know it best? Why not learn how to code in Bali? How to handdraw sign letters in Dublin or how to take awesome photos in London?</p>
   </div>
 </section>
 
@@ -25,8 +25,7 @@ banner: /images/homepage/homepage-bg.jpg
         <div class='image-tile' style='background-image:url("{{ upskill.feature-image_path }}");'></div>
         <h3> {{ upskill.title }}</h3>
         <p class="snippet"> {{upskill.snippet}}</p>
-        <p class="details">{{upskill.location}}</p>
-        <p class="details"> {{ upskill.duration }} - {{ upskill.host-name }} - {{ upskill.price }}</p>
+        <p class="details">{{upskill.location}}</earn with Localsdetails"> {{ upskill.duration }} - {{ upskill.host-name }} - {{ upskill.price }}</p>
       </div>
     </a>
   {% endfor %}
