--- a/_upskills/bike-tour-copenhagen.html
+++ b/_upskills/bike-tour-copenhagen.html
@@ -1,7 +1,7 @@
 ---
 layout: upskill
 banner: /uploads/bike-tour-copenhagen.jpg
-title: Bike Tour Copenhagen
+title: Bike Tour and Sustainable Living in Copenhagen
 subtitle: Bike Copenhagen like a local
 skill-name: Bike Tour
 location: 'Copenhagen, Denmark'
@@ -11,7 +11,7 @@ where: Copenhagen, Denmark
 good-to-know: Wear warm clothes and shoes suitable for biking, it might get chilly in the evening, even though it's summer.
 where: Nørrebro, Copenhagen
 price: $275 USD per person
-duration: 1 full day, 8 hours in total including, lunch and coffee.
+duration: 1 full day, 8 hours in total.
 host-name: Kristian
 host-bio: Kristian is a Copenhagen based entrepreneur, running his own business Tours In Copenhagen where he shows visitors around Copenhagen and Zealand. He is passionate about food and people and he loves his city, where he has lived for more than 10 years. Originally hailing from the Northen Jutland countryside, Kristian now calls Copenhagen home. He's living with his family in Nørrebro.
 host-photo: /uploads/kristian.jpg
