--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 title: Learn with locals while you travel
-subtitle: Learn new skills, meet people and have fun
-banner: /images/homepage/brooke-cagle-195777.jpg
+subtitle: Learn something new
+sign-up: <a class="button" href="/signup.html"> SIGN UP </a>
+banner: /images/homepage/bg-photography.jpg
 ---
-
 <!--ABOUT BANNER SECTION  -->
 <section class="about-banner-section center">
   <div>
-    <h5>Imagine going somewhere like London, Los Angeles or Bali - but instead of just hanging out doing the typical tourist stuff, you might be able to pick up a new skill or upskill an existing one?</h5>
-    <p>Learn with Locals allows you to meet likeminded people and learn something new and why not learn it from locals who know it best? Why not learn how to code in Bali? How to handdraw sign letters in Dublin or how to take awesome photos in London?</p>
+    <h5>Imagine going somewhere like Bali - but instead of just doing the typical tourist stuff, you might be able to pick up a new skill or upskill an existing one?</h5>
+    <p>Learn with Locals allows you to see iconic locations and capture stunning images all while learning the art of photography, meeting new people and having fun!</p>
   </div>
 </section>
 
