--- a/_upskills/web.development.bali.html
+++ b/_upskills/web.development.bali.html
@@ -1,23 +1,23 @@
 ---
 layout: upskill
-banner: /uploads/category-skills-1.jpg
-title: Photography Class Bali
-subtitle: Learn photography in Bali
-skill-name: photography-class-bali
+banner: /uploads/web-development-bali.jpg
+title: Web Development
+subtitle: Learn web development in Bali
+skill-name: web-development-bali
 location: 'Bali, Indonesia'
-snippet: Learn photography in Bali and get insider knowledge of the most iconic locations in Bali.
-skill-name: photography-class-bali
+snippet: Learn how to code in Bali and get insider knowledge of the most iconic locations in Bali.
+skill-name: Learn how to code
 where: Bali, Indonesia
 what: I will teach you how to take awesome photos in some of the most iconic locations in Bali.
 good-to-know: Make sure you have space on your memory card.
 where: Canggu, Bali
-price: $100 USD
-duration: 1 day
-host-name: Ulla
+price: $300 USD
+duration: 3 days
+host-name: Tina
 host-bio: Ulla is a self-taught photographer based in Bali.
 about: Always curious and with a camera, that's how Ulla describes herself, she is a digital nomad, web developer and curious traveler based in Bali.
 host-photo: /images/hosts/ulla.jpg
-feature-image_path: /uploads/category-skills-1.jpg
+feature-image_path: /uploads/web-development-bali.jpg
 featured-images:
   - path: /images/upskills/web-development-bali/learn-how-to-code_3.jpg
   - path: /images/upskills/web-development-bali/learn-how-to-code_4.jpg
