--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 ---
 layout: default
 title: Learn with locals while you travel
-subtitle: Learn something new
+subtitle: Upskill and connect with likeminded people
 sign-up: <a class="button" href="/signup.html"> SIGN UP </a>
 banner: /images/homepage/bg-photography.jpg
 ---
 <!--ABOUT BANNER SECTION  -->
 <section class="about-banner-section center">
   <div>
-    <h5>Imagine going somewhere like Bali - but instead of just doing the typical tourist stuff, you might be able to pick up a new skill or upskill an existing one?</h5>
-    <p>Learn with Locals allows you to see iconic locations and capture stunning images all while learning the art of photography, meeting new people and having fun!</p>
+    <h5>Imagine going somewhere exotic like Bali - instead of just doing the typical tourist stuff, you might be able to pick up a new skill or upskill an existing one?</h5>
+    <p>Learn with Locals allows you to experience iconic locations and and connect with likeminded people all while learning something new!</p>
   </div>
 </section>
 
 <!--FEATURED BANNER SECTION  -->
 <section class="featured-banner-section center">
-  <h2>Featured Skills & Experiences</h2>
+  <h2>What do you want to learn?</h2>
 
 <!--FEATURE SKILL 1 -->
 <div class="grid">
@@ -41,17 +41,20 @@ banner: /images/homepage/bg-photography.jpg
     </div>
     <div class="col-1 quote right">"</div>
     <div class="col-6-middle testimonial-section center">
-      I always wanted to learn coding, so I signed up for a 3 day experience with Tina. I can honestly say it's been hard as hell, but I've learned how to code my own website and my problem solving skills have improved too. Can only recommend this skill to anyone wanting to better themselves and learn something new.
+      I always wanted to learn coding, so I signed up for a 3 day learning experience with Tina. It's been challenging, but I've learned how to code my own website and my problem solving skills have improved too. Can only recommend this skill to anyone wanting to empower themselves and connect with cool people.
     </div>
     <div class="col-1-bottom quote left">"</div>
   </div>
 </section>
 
 <!-- CATEGORY SECTION -->
+
+
+<!---
+
 <section>
 <h2>What do you want to learn?</h2>
 <div class="grid-middle">
-<!-- CATEGORY 1 -->
 {% for cat in site.categories %}
     <a class="col-3_md-6_xs-12" href="/skills">
       <div class="category-image category-square" style="background-image:url('/images/categories/{{ cat.feature-image }}')">
@@ -63,14 +66,15 @@ banner: /images/homepage/bg-photography.jpg
   {% endfor %}
 </div>
 </section>
+--->
 
 <!-- SIGN UP SECTION -->
 <section class="sign-up-section">
   <div>
     <h2>
-      Want to offer your skills, learn something new and have fun?
+      Want to offer your skills and learn something new?
     </h2>
-    <h5>Sign up now to show interest and you'll be the first to know when we launch!</h5>
+    <h5>Sign up now to offer your skills and recieve 20% off any Learning Experience!</h5>
     <a class="button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
