--- a/signup.html
+++ b/signup.html
@@ -12,20 +12,20 @@ banner: /images/homepage/bg-photography.jpg
       Want to offer your skills and learn something new?
     </h2>
     <p> We're currently building our community and looking for people like you.</p>
-    <p>Sign up now to show interest and let us know what you'd like to learn or teach!</p>
+    <p>Let us know what you'd like to learn or teach!</p>
 
   </div>
 </section>
 
 <section class="sign-up-form center">
-  <p> Sign up for our beta-launch:</p>
+  <p> SIGN UP NOW and get 20% off any Experience when we launch!</p>
   <form method="POST" action="http://formspree.io/urisager@gmail.com">
   <input type="text" name="name" placeholder="Name">
   <input type="email" name="email" placeholder="Email">
   <input type="text" id="location" name="location" placeholder="Where are you located?">
   <textarea name="what-will-you-teach" placeholder="What would you like to teach or learn?" rows="5"></textarea>
-  <textarea name="what-is-your-motivation" placeholder="What is your motivation for signing up?" rows="5"></textarea>
   <textarea name="about-you" placeholder="Tell us a little about you" rows="5"></textarea>
+  <textarea name="where-did-you-hear-about-us" placeholder="Where did you hear about us?" rows="5"></textarea>
   <input type="hidden" name="_next" value="/index.html"/>
   <button type="submit" class="button">Send</button>
   <input type="hidden" name="_next" value="../sign-up-thanks.html">
