--- a/_upskills/photography-class-bali.html
+++ b/_upskills/photography-class-bali.html
@@ -5,7 +5,7 @@ title: Photography class
 subtitle: Learn photography in Bali
 skill-name: photography-class-bali
 location: 'Bali, Indonesia'
-snippet: Learn photography in Bali and get insider knowledge of the most iconic locations in Bali.
+snippet: Learn photography in Bali and get insider knowledge of the most iconic locations.
 skill-name: photography-class-bali
 where: Bali, Indonesia
 what: I will teach you how to take awesome photos in some of the most iconic locations in Bali.
