--- a/_upskills/web.development.bali.html
+++ b/_upskills/web.development.bali.html
@@ -5,7 +5,7 @@ title: Web Development
 subtitle: Learn web development in Bali
 skill-name: web-development-bali
 location: 'Bali, Indonesia'
-snippet: Learn how to code in Bali and get insider knowledge of the most iconic locations in Bali.
+snippet: Learn how to code in Bali and connect with likeminded people.
 skill-name: Learn how to code
 where: Bali, Indonesia
 what: I will teach you how to take awesome photos in some of the most iconic locations in Bali.
