--- a/_upskills/digital-marketing-bali.html
+++ b/_upskills/digital-marketing-bali.html
@@ -33,7 +33,7 @@ categories: ['tech']
 <section class="sign-up-section">
   <div>
     <h3>
-      Sign up now and receive 20% off your first Experience!</h3>
+      Sign up now and receive 20% off your first Learning Experience!</h3>
     <a class="button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
