--- a/_upskills/learn-photography-bali.html
+++ b/_upskills/learn-photography-bali.html
@@ -1,7 +1,7 @@
 ---
 layout: upskill
 banner: /uploads/category-skills-1.jpg
-title: Photography class
+title: Photography
 subtitle: Learn photography in Bali
 skill-name: photography-class-bali
 location: 'Bali, Indonesia'
@@ -13,7 +13,7 @@ good-to-know: Make sure you have space on your memory card.
 where: Canggu, Bali
 price: $100 USD
 duration: 1 day
-host-name: Emilio
+host-name: Ulla
 host-bio: Ulla is a self-taught photographer based in Bali.
 about: Always curious and with a camera, that's how Ulla describes herself, she is a digital nomad, web developer and curious traveler based in Bali.
 host-photo: /images/hosts/ulla.jpg
