--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ banner: /images/homepage/bg-photography.jpg
       Want to offer your skills and learn something new?
     </h2>
     <h5>Sign up now to offer your skills and recieve 20% off any Learning Experience!</h5>
-    <a class="button" href="/signup.html"> SIGN UP </a>
+    <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
 
