--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,8 @@ banner: /images/homepage/bg-photography.jpg
 </section>
 
 <section class="sign-up-form center">
-  <p> SIGN UP NOW and get 20% off any Experience when we launch!</p>
+  <p>SIGN UP NOW!</p>
+  <p>Get 20% OFF any future Learning Experience plus early beta access.</p>
   <form method="POST" action="http://formspree.io/urisager@gmail.com">
   <input type="text" name="name" placeholder="Name">
   <input type="email" name="email" placeholder="Email">
