--- a/_upskills/digital-marketing-bali.html
+++ b/_upskills/digital-marketing-bali.html
@@ -4,7 +4,7 @@ banner: /uploads/digital-marketing-bali.jpg
 title: Digital Marketing
 subtitle: Learn digital marketing in Bali
 skill-name: digital-marketing-bali
-location: 'Bali, Indonesia'
+location: 'Melbourne, Australia'
 snippet: Learn Digital Marketing in Bali
 skill-name: digital-marketing-bali
 where: Bali, Indonesia
