--- a/_upskills/learn-photography-bali.html
+++ b/_upskills/learn-photography-bali.html
@@ -18,6 +18,8 @@ host-bio: Ulla is a self-taught photographer based in Bali.
 about: Always curious and with a camera, that's how Ulla describes herself, she is a digital nomad, web developer and curious traveler based in Bali.
 host-photo: /images/hosts/ulla.jpg
 feature-image_path: /uploads/category-skills-1.jpg
+map:
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805184.7034087802!2d144.49132004031563!3d-37.97123049194095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne+VIC%2C+Australia!5e0!3m2!1sen!2skr!4v1493780726658" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 featured-images:
   - path: /images/upskills/web-development-bali/learn-how-to-code_3.jpg
   - path: /images/upskills/web-development-bali/learn-how-to-code_4.jpg
@@ -34,6 +36,6 @@ categories: ['tech']
   <div>
     <h3>
       Sign up now and receive 20% off your first Experience!</h3>
-    <a class="button" href="/signup.html"> SIGN UP </a>
+    <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
